--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
       </ul>
       <ul>
         <li><a href="{{ url_for('dashboard') }}">Dashboard</a></li>
-        <li><a href="{{ url_for('request_booking') }}">Request Booking</a></li>
+       <li><a href="{{ url_for('request_new') }}">New request</a></li>
         <li><a href="{{ url_for('calendar_view') }}">Calendar</a></li>
         <li><a href="{{ url_for('calendar_ics') }}">ICS feed</a></li>
 
